# mcp-screenshot

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml  platform_test_report.yml
.github/workflows/: pr-labels-ci.yml  pr-labels.yml  test.yml
src/mcp_screenshot/: __init__.py  capture.py  errors.py  server.py
src/mcp_screenshot/instructions/: screenshot.md  server.md
tests/: test_capture.py  test_errors.py  test_server.py
