[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-screenshot"
version = "0.1.0"
description = "MCP server for AI-agent-driven screen capture — cross-platform, no external binaries required, structured errors."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chris Means", email = "chris.a.means@gmail.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
keywords = ["screenshot", "mcp", "claude", "screen-capture", "ai-agent"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
mcp-screenshot = "mcp_screenshot.server:main"

[project.urls]
Homepage = "https://github.com/cmeans/mcp-screenshot"
Repository = "https://github.com/cmeans/mcp-screenshot"
Issues = "https://github.com/cmeans/mcp-screenshot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_screenshot"]
artifacts = ["src/mcp_screenshot/instructions/*.md", "src/mcp_screenshot/icons/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mcp_screenshot"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except PackageNotFoundError",
]
